# DetectorOfDigits

./: CMakeLists.txt  README.md
detector/: CMakeLists.txt
detector/sources/: main.cpp
detector/sources/core/: neuralNetwork.cpp  neuralNetwork.hpp  window.cpp  window.hpp
detector/sources/gui/: drawWidget.cpp  drawWidget.hpp  resultWidget.cpp  resultWidget.hpp
detector/sources/math/: rectifier.cpp  rectifier.hpp
